vueとの連携完成

--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,9 @@
     <title>front</title>
   </head>
   <body>
+  <title>Hello Vue.js</title>
     <div id="app"></div>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
